--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@ nav {
   z-index: 1000;
 }
 
+.nav-left,
+.nav-center,
+.nav-right {
+  flex: 1;
+}
+
+.nav-center {
+  text-align: center;
+}
+
+.nav-right {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  gap: 25px;
+}
+
+.name {
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 36px;
+  color: #38bdf8;
+}
+
 nav h1 {
   font-weight: 600;
   letter-spacing: 1px;
@@ -222,8 +246,15 @@ footer {
 
 <!-- NAV -->
 <nav>
-  <h1>AI Creator</h1>
-  <ul>
+  <div class="nav-left">
+    <h1>AI Content Creator</h1>
+  </div>
+
+  <div class="nav-center">
+    <h1 class="name">Nikolay Nedev</h1>
+  </div>
+
+  <ul class="nav-right">
     <li><a href="#home">Home</a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#portfolio">Portfolio</a></li>
