--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
   </div>
 
   <div class="gallery">
-    <div class="gallery-item" data-category="image"><img src="/content/1.jpg"></div>
+    <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
 
     <div class="gallery-item" data-category="video">
       <video controls>
-        <source src="/content/1.mp4" type="video/mp4">
+        <source src="content/1.mp4" type="video/mp4">
       </video>
     </div>
 
-    <div class="gallery-item" data-category="image"><img src="/content/2.jpg"></div>
+    <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
 
     <div class="gallery-item" data-category="video">
       <video controls>
-        <source src="/content/4.mp4" type="video/mp4">
+        <source src="content/4.mp4" type="video/mp4">
       </video>
     </div>
   </div>
