--- a/index.html
+++ b/index.html
@@ -69,16 +69,15 @@
     <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
 
     <div class="gallery-item" data-category="video">
-      <video controls>
-        <source src="content/1.mp4" type="video/mp4">
-      </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wGKKG7nTdPc?si=aeEZP16j2yqoXT5W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
 
     <div class="gallery-item" data-category="video">
-      <video controls>
+      <video controls poster="content/thumbnail.jpg">
         <source src="content/4.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
     </div>
   </div>
