--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
 
     <div class="gallery-item" data-category="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/wGKKG7nTdPc?rel=0&modestbranding=1&controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wGKKG7nTdPc?si=EtDRBiXgiIUJsB2k?rel=0&modestbranding=1&controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
