--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!-- <div class="video-wrapper"> -->
 <div class="gallery-item">
   <div class="video-thumbnail" onclick="loadVideo(this)">
-    <img src="1.jpg" alt="Cinematic Coffee">
+    <img src="content/1.jpg" alt="Cinematic Coffee">
     <div class="play-button"></div>
   </div>
 </div>
