--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
 
     <div class="gallery-item" data-category="video">
-      <video controls poster="content/thumbnail.jpg">
+      <video controls poster="content/1.jpg">
         <source src="content/4.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
