--- a/index.html
+++ b/index.html
@@ -69,12 +69,17 @@
     <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
 
     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/wGKKG7nTdPc?si=EtDRBiXgiIUJsB2k?rel=0&modestbranding=1&controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
-<div class="video-wrapper">
-  <div class="video-thumbnail" onclick="loadVideo(this)">
-    <img src="1.jpg" alt="Cinematic Coffee">
-    <div class="play-button"></div>
+    <div class="gallery-item" data-category="video">
+      <iframe 
+        width="100%" 
+        height="500"
+        src="https://www.youtube.com/embed/wGKKG7nTdPc?autoplay=0&rel=0&modestbranding=1&controls=1"
+        title="Cinematic Coffee"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
   </div>
-</div>
     <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
 
     <div class="gallery-item" data-category="video">
