--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="gallery-item" data-category="video">
       <iframe 
         width="100%" 
-        height="500"
+        height="100%"
         src="https://www.youtube.com/embed/wGKKG7nTdPc?autoplay=0&rel=0&modestbranding=1&controls=1"
         title="Cinematic Coffee"
         frameborder="0"
