nav bar for mobile

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <!-- NAV -->
 <nav>
   <div class="nav-left">
+    <img src="content/logo.png" alt="Logo" class="nav-logo">
     <h1>AI Content Creator</h1>
   </div>
 
-  <div class="nav-center">
+  <!-- <div class="nav-center">
     <h1 class="name">Nikolay Nedev</h1>
-  </div>
+  </div> -->
+
+  <button class="menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
 
   <ul class="nav-right">
     <li><a href="#home">Home</a></li>
