--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:image" content="content/logo.png" />
-<title>AI Creator | Portfolio</title>
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Nedev Studio | Portfolio" />
+<meta property="og:description" content="I create AI images and videos with cinematic quality for brands and creators." />
+<meta property="og:url" content="https://nedevstudio.com//" />
+<meta property="og:image" content="https://nedevstudio.com//content/logo.png" />
+<meta property="og:image:alt" content="Nedev Studio logo" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Nedev Studio | Portfolio" />
+<meta name="twitter:description" content="I create AI images and videos with cinematic quality for brands and creators." />
+<meta name="twitter:image" content="https://nedevstudio.com//content/logo.png" />
+<title>Nedev Studio | Portfolio</title>
 
 <link rel="stylesheet" href="style.css">
 </head>
