--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Nedev Studio | Portfolio" />
 <meta property="og:description" content="I create AI images and videos with cinematic quality for brands and creators." />
-<meta property="og:url" content="https://nedevstudio.com//" />
+<meta property="og:url" content="https://nedevstudio.com" />
 <meta property="og:image" content="https://nedevstudio.com//content/logo.png" />
 <meta property="og:image:alt" content="Nedev Studio logo" />
 
