--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <meta name="twitter:description" content="I create AI images and videos with cinematic quality for brands and creators." />
 <meta name="twitter:image" content="https://nedevstudio.com//content/logo.png" />
 <title>Nedev Studio | Portfolio</title>
+<link rel="icon" type="image/png" href="content/logo.png">
 
 <link rel="stylesheet" href="style.css">
 </head>
