contact form created

--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
   </div>
 </section>
 
+<!-- CONTACT -->
+<section id="contact">
+  <h2 class="section-title">Contact Me</h2>
+  <form id="contact-form">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit" class="btn">Send Message</button>
+    <p id="contact-status" aria-live="polite"></p>
+  </form>
+</section>
+
 <footer>
   © 2026 AI Creator Portfolio. All rights reserved.
 </footer>
