--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         Your browser does not support the video tag.
       </video>
     </div>
+    <div class="gallery-item" data-category="image"><img src="content/4.jpg"></div>
   </div>
 </section>
 
