--- a/index.html
+++ b/index.html
@@ -81,29 +81,66 @@
   </div>
 
   <div class="gallery">
-    <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
+   
 
     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/wGKKG7nTdPc?si=EtDRBiXgiIUJsB2k?rel=0&modestbranding=1&controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
     <div class="gallery-item" data-category="video">
       <iframe 
         width="100%" 
         height="100%"
-        src="https://www.youtube.com/embed/wGKKG7nTdPc?autoplay=0&rel=0&modestbranding=1&controls=1"
-        title="Cinematic Coffee"
+        src="https://www.youtube.com/embed/pKYSMTQIWho?autoplay=0&rel=0&modestbranding=1&controls=1"
+        title="Nedev Logo"
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
       </iframe>
-  </div>
-    <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
-
+    </div>
     <div class="gallery-item" data-category="video">
+      <iframe 
+        width="100%" 
+        height="100%"
+        src="https://www.youtube.com/embed/MKzvLiRtq5A?autoplay=0&rel=0&modestbranding=1&controls=1"
+        title="Ad"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+
+
+    <!-- <div class="gallery-item" data-category="video">
       <video controls poster="content/thumbnail.jpg">
         <source src="content/4.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
-    </div>
+    </div> -->
     <div class="gallery-item" data-category="image"><img src="content/4.jpg"></div>
+    
+    <div class="gallery-item" data-category="video">
+      <iframe 
+        width="100%" 
+        height="100%"
+        src="https://www.youtube.com/embed/5b6GZinGuNs?autoplay=0&rel=0&modestbranding=1&controls=1"
+        title="Ad"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="gallery-item" data-category="image"><img src="content/1.jpg"></div>
+    <div class="gallery-item" data-category="image"><img src="content/2.jpg"></div>
+    <div class="gallery-item" data-category="video">
+    <iframe 
+      width="100%" 
+      height="100%"
+      src="https://www.youtube.com/embed/wGKKG7nTdPc?autoplay=0&rel=0&modestbranding=1&controls=1"
+      title="Cinematic Coffee"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+    </div>
+
   </div>
 </section>
 
